zinal/tests/errors/error_in_expression.stderr
error[E0609]: no field `unknown_prop` on type `Example`
 --> tests/errors/error_in_expression.rs:3:10
  |
3 | #[derive(Template)]
  |          ^^^^^^^^ unknown field
  |
  = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)
